--- a/src/Application/Application.csproj
+++ b/src/Application/Application.csproj
@@ -10,10 +10,17 @@
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" />
+    <PackageReference Include="OneOf" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Domain\Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Competitions\Commands\" />
+    <Folder Include="Competitions\Queries\" />
+    <Folder Include="Cyclists\Commands\" />
   </ItemGroup>
 
 </Project>
