--- a/src/Domain/Domain.csproj
+++ b/src/Domain/Domain.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="OneOf" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Repositories\" />
+  </ItemGroup>
+
 </Project>
